[gd_scene load_steps=8 format=3 uid="uid://cf3unc30pl34t"]

[ext_resource type="StyleBox" uid="uid://b6my5kblcuosw" path="res://ChatRoom/Assets/TransparentBackground.tres" id="1_1qgj0"]
[ext_resource type="Script" path="res://ChatRoom/patient_information.gd" id="1_b3cfa"]
[ext_resource type="Texture2D" uid="uid://dto1au7i7aggo" path="res://Scenarios/HoloBookWorker/Alk.png" id="3_m54g1"]
[ext_resource type="LabelSettings" uid="uid://0kbo3uxeglki" path="res://ChatRoom/Assets/PatientDescription.tres" id="3_vb0ut"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3550m"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0953572, 0.416056, 0.261026, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Gradient" id="Gradient_uq5nq"]
offsets = PackedFloat32Array(0.0584416, 0.155844, 0.207792, 0.214286)
colors = PackedColorArray(1, 0.109804, 0.0627451, 1, 0, 0, 0, 1, 0.973535, 0.973535, 0.973535, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vjioc"]
gradient = SubResource("Gradient_uq5nq")
width = 410
height = 410
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.600917, 0.821101)

[node name="PatientInformation" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_1qgj0")
script = ExtResource("1_b3cfa")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.95
theme_override_styles/panel = ExtResource("1_1qgj0")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.14
theme_override_styles/panel = ExtResource("1_1qgj0")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 30

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3550m")

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/PanelContainer/VBoxContainer/MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = SubResource("GradientTexture2D_vjioc")
expand_mode = 1

[node name="Portrait" type="TextureRect" parent="HBoxContainer/PanelContainer/VBoxContainer/MarginContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_m54g1")
expand_mode = 1
stretch_mode = 4

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
theme_override_styles/panel = ExtResource("1_1qgj0")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.43
theme_override_styles/panel = ExtResource("1_1qgj0")

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.51
theme_override_styles/panel = ExtResource("1_1qgj0")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 0

[node name="PatientFileLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Patient file"
label_settings = ExtResource("3_vb0ut")
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = ExtResource("1_1qgj0")

[node name="PatienNameLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Tektor"
label_settings = ExtResource("3_vb0ut")
horizontal_alignment = 1

[node name="PatientSurnameLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Vladonis"
label_settings = ExtResource("3_vb0ut")
horizontal_alignment = 1

[node name="PatientBirthDateLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "14/02/4255"
label_settings = ExtResource("3_vb0ut")
horizontal_alignment = 1

[node name="PatientInfoLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 6
text = "Description far too long for this"
label_settings = ExtResource("3_vb0ut")
horizontal_alignment = 1
autowrap_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
theme_override_styles/panel = ExtResource("1_1qgj0")
